load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("@host_system_libraries//:defs.bzl", "HOST_SYSTEM_LIBRARIES")

cc_binary(
    name = "vesc_cmd",
    srcs = ["vesc_cmd.cpp"],
    deps = ["//third_party/vesc_uart"],
)

cc_binary(
    name = "i2c",
    srcs = ["i2c.cpp"],
    deps = [
        "@fmt",
	"//system:libi2c-dev",
    ],
)
