load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_test")

# With GCC and tsan:
# error: 'atomic_thread_fence' is not supported with '-fsanitize=thread' [-Werror=tsan]
config_setting(
    name = "gcc_tsan",
    flag_values = {"@bazel_tools//tools/cpp:compiler": "gcc"},
    values = {"features": "tsan"},
)

cc_binary(
    name = "serial_test",
    srcs = ["serial_test.cpp"],
    target_compatible_with = select({
        ":gcc_tsan": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        "@asio",
        "@fmt",
    ],
)

# creating a file/device with socat will fail as a `sh_test`
# https://bazel.build/reference/test-encyclopedia#test-interaction-filesystem
sh_binary(
    name = "virtual_serial_port_test",
    srcs = ["test_virtual_serial_port.sh"],
    args = ["$(rootpath :serial_test)"],
    data = [":serial_test"],
)

cc_test(
    name = "dummy_test",
    timeout = "short",
    srcs = ["dummy_test.cpp"],
    deps = [
        "@boost_ut",
        "@fmt",
        "@linalg",
        "@mdspan",
    ],
)

cc_test(
    name = "units_test",
    timeout = "short",
    srcs = ["units_test.cpp"],
    deps = [
        "@boost_ut",
        "@fmt",
        "@mp_units",
    ],
)
